<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/phone_number_input"
        android:layout_width="wrap_content"
        android:minWidth="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/my_phone_number"
        android:inputType="phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/phone_number_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_input"
        app:layout_constraintEnd_toEndOf="@id/phone_number_input"
        app:layout_constraintStart_toStartOf="@id/phone_number_input"
        android:text="@string/register"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enable_role_call_proxy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_apply"
        app:layout_constraintEnd_toEndOf="@id/phone_number_apply"
        app:layout_constraintStart_toStartOf="@id/phone_number_apply"
        android:text="@string/enable_role"/>

    <androidx.appcompat.widget.AppCompatToggleButton
        android:id="@+id/state_call_proxy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        app:layout_constraintTop_toBottomOf="@+id/enable_role_call_proxy"
        app:layout_constraintEnd_toEndOf="@id/enable_role_call_proxy"
        app:layout_constraintStart_toStartOf="@id/enable_role_call_proxy"
        tools:text="@string/enable_proxy"
        android:checked="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/unregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        app:layout_constraintTop_toBottomOf="@+id/state_call_proxy"
        app:layout_constraintEnd_toEndOf="@id/state_call_proxy"
        app:layout_constraintStart_toStartOf="@id/state_call_proxy"
        android:text="@string/unregister"
        android:enabled="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>